# LinSynthCollection

CatSynth/: Cargo.toml  DOCUMENTATION.md  README.md  bundler.toml
CatSynth/nih_plug_vizia/assets/: theme.css
CatSynth/plugins/catsynth/: Cargo.toml
CatSynth/src/buffer/: samples.rs
DogSynth/: Cargo.toml  DOCUMENTATION.md  README.md  bundler.toml
DogSynth/plugins/dogsynth/: Cargo.toml
DogSynth/plugins/dogsynth/src/: distortion.rs  editor.rs  envelope.rs  lib.rs  params.rs  spectral.rs  voice.rs
DogSynth/src/: util.rs
DogSynth/src/params/: boolean.rs  enums.rs  float.rs  integer.rs
FishSynth/: Cargo.toml  DOCUMENTATION.md  README.md  bundler.toml
FishSynth/.github/: FUNDING.yml
FishSynth/.github/workflows/: build.yml  docs.yml  readme-Linux.txt  readme-Windows.txt  readme-macOS.txt  test.yml
FishSynth/plugins/cartstack/: Cargo.toml
FishSynth/plugins/delaybank/: Cargo.toml  README.md
FishSynth/plugins/delaybank/assets/: theme.css
FishSynth/plugins/delaybank/src/: editor.rs  lib.rs  presets.rs
FishSynth/plugins/fishsynth/: Cargo.toml
FishSynth/src/: params.rs  prelude.rs
FishSynth/src/plugin/: vst3.rs
MiceSynth/: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  bundler.toml
MiceSynth/nih_plug_vizia/assets/: widgets.css
MiceSynth/plugins/MiceSynth/: Cargo.toml
MiceSynth/src/buffer/: blocks.rs
PlantSynth/: Cargo.toml  DOCUMENTATION.md  README.md  bundler.toml
PlantSynth/nih_plug_vizia/assets/: widgets.css
SannySynth/: Cargo.toml  DOCUMENTATION.md  README.md  bundler.toml
SannySynth/src/: buffer.rs  plugin.rs  prelude.rs
(+86 files in other folders)
