[package]
name = "delaybank"
version = "0.1.0"
edition = "2021"
authors = ["Ling Lin <taellinglin@gmail.com>"]
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { path = "../../" }
nih_plug_vizia = { path = "../../nih_plug_vizia" }
enum-iterator = "1.4.1"
atomic_float = "0.1"
